--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   font-family: "Lora", serif;
-  color: #444;
+  color: rgb(56, 55, 55);
 }
 
 .headerTitleSm {
