--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -8,7 +8,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url("https://images.pexels.com/photos/768473/pexels-photo-768473.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    url("https://i.ibb.co/mHrdFBM/wp2462597.jpg");
   background-size: cover;
 }
 
